--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "serve": "vite preview",
+    "build": "vite build",
+    "lint": "eslint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -15,16 +16,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "@vue/cli-plugin-babel": "~5.0.0-beta.6",
-    "@vue/cli-plugin-eslint": "~5.0.0-beta.6",
-    "@vue/cli-plugin-typescript": "~5.0.0-beta.6",
-    "@vue/cli-service": "~5.0.0-beta.6",
+    "@vitejs/plugin-vue": "^1.9.3",
     "@vue/compiler-sfc": "^3.2.6",
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^7.20.0",
     "eslint-plugin-vue": "^7.2.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vite": "^2.6.10"
   }
 }
