--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v2.2.4
       - name: Setup Node.js 18
+        uses: actions/setup-node@v3.6.0
         with:
           node-version: 18.x
           cache: 'pnpm'
