--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup pnpm
         uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7.25.0
       - name: Setup Node.js 18
         uses: actions/setup-node@v3.6.0
         with:
