--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,19 +14,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2.2.4
-        with:
-          version: 7.25.0
       - name: Setup Node.js 18
         uses: actions/setup-node@v3.6.0
         with:
           node-version: 18.x
-          cache: 'pnpm'
       - name: Install dependencies
-        run: pnpm install
+        run: npm ci
       - name: Build
-        run: pnpm build
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1.0.7
         with:
