--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,10 @@ on:
 
 jobs:
   build:
+    permissions:
+      pages: write
+      id-token: write
+    
     runs-on: ubuntu-latest
 
     steps:
